<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:weightSum="1"
    android:background="@drawable/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/MindMasterText"
        android:layout_gravity="center_horizontal"
        android:textSize="40dip"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/join_game"
        android:id="@+id/buttonNewGame"
        android:layout_gravity="center_horizontal"
        android:layout_margin="15dp"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/host_game"
        android:id="@+id/buttonConnect"
        android:layout_gravity="center_horizontal"
        android:layout_margin="15dp"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/how_to"
        android:id="@+id/buttonHowTo"
        android:layout_gravity="center_horizontal"
        android:layout_margin="15dp"/>


</LinearLayout>
